--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -404,6 +404,11 @@ footer {
     }
 
     a { color: #fff; }
+
+    & > * {
+        position: relative;
+        z-index: 2;
+    }
 }
 
 #featured h3 {
@@ -545,7 +550,6 @@ footer {
 }
 
 .items.show #itemfiles-stage {
-    min-height: 500px;
     width: 100%; 
     height: 80%;
     background: #E0E0E0; 
@@ -602,10 +606,34 @@ footer {
     border-bottom: $spacing-l solid transparent;
 }
 
+
+.item-metadata nav {
+    column-span: all;
+    margin: 0 (-$spacing-l);
+    border-bottom: 1px solid $border-gray;
+}
+
 ul.item-pagination.navigation {
     column-span: all;
     display: flex;
     justify-content: space-between;
+    position: relative;
+    margin: 0;
+
+    &:after {
+        content: "";
+        bottom: 0;
+        top: 0;
+        left: 50%;
+        width: 1px;
+        background-color: $border-gray;
+        position: absolute;
+    }
+
+    a {
+        padding: $spacing-m;
+        display: inline-block;
+    }
 }
 
 /* @end */
